# Virtual-Companion

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  atri-backend.spec  main.py  package.json  pyproject.toml  start.bat  stop.bat  uv.toml
api/: schemas.py
api/routes/: asr.py  asr_mgmt.py  avatars.py  backgrounds.py  character_motion_bindings_v2.py  characters.py  conversations.py  health.py  messages.py  models.py  motions.py  providers.py  tts.py  tts_providers.py  upload.py  voice_assets.py
core/: __init__.py  agent_coordinator.py  config.py  dependencies.py  logger.py  runtime.py  store.py
core/asr/: __init__.py  model_downloader.py  sensevoice.py
core/callbacks/: __init__.py  llm_call_logger.py  token_usage.py
core/db/: __init__.py  base.py  models.py  utils.py
core/middleware/: __init__.py  dynamic_model.py  dynamic_prompt.py  dynamic_tools.py  logging_middleware.py
core/models/: __init__.py  config.py  factory.py  providers.yaml
core/prompts/: __init__.py  prompt_manager.py
core/repositories/: __init__.py  base.py  character_repository.py  conversation_repository.py  message_repository.py  model_repository.py  provider_repository.py
core/services/: __init__.py  background_service.py  conversation_service.py  message_service.py  model_service.py  output_strategy.py  sync_service.py
core/tools/: __init__.py  memory_tools_v3.py
core/tts/: __init__.py  base.py  edge_tts_local.py  factory.py  genie_tts.py  gpt_sovits.py  qwen_tts.py  registry.py
core/utils/: __init__.py  message_utils.py  short_uuid.py
core/vrm/: __init__.py  vrm_service.py
docs/: README.md
docs/01-入门/: 国际化脚本指南.md  开发指南.md  桌面构建与发布指南.md
docs/02-架构/: TTS 架构.md  供应商系统.md  日志系统.md  系统架构.md  记忆系统架构.md
docs/03-规划/: 启动优化方案.md  命令系统设计.md  整体重构实施计划.md  系统性能与运行时升级方案.md  项目待办.md
examples/: orm_api_example.py  test_memory_v3.py  test_qwen_tts.py
frontend/: .eslintrc.cjs  .gitignore  App.tsx  BootstrapGate.tsx  eslint.config.js  index.html  index.tsx  package-lock.json  package.json  tailwind.config.js  test-character-card.html  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/contexts/: LanguageContext.tsx  ThemeContext.tsx
frontend/hooks/: index.ts  useAudioRecorder.ts  useChat.ts  useTTS.ts
frontend/locales/: en.json  zh.json
frontend/pages/: StyleGuide.tsx
frontend/public/: audio-processor.js
frontend/scripts/: check-i18n.ts
frontend/services/: storage.ts
frontend/src-tauri/: Cargo.toml  portable.mode  (+1 more)
scripts/: __init__.py  bump_version.py  common.py  release.py
(+135 files in other folders)
